# c-image-viewer

./: .gitignore  README.md  TODO  meson.build  meson.options
bash/: civ  meson.build
desktop/: civ.desktop
shaders/: box.vert  rectangle.frag  rectangle.vert  text.frag
share/: civ.desktop
src/: Makefile  a.out  arg.c  arg.h  box.c  box.h  build.ninja  civ-config.c  civ-config.h  civ.c  civ.h  civ_config.c  civ_config.h  clock.h  file.c  file.h  gl_box.c  gl_box.h  gl_image.c  gl_image.h  gl_shader.c  gl_shader.h  gl_text.c  gl_text.h  gl_uniform.c  glad.c  glad.h  grind.sh  image.c  image.h  lut.h  main.c  mem.c  mem.h  meson.build  queue.c  queue.h  shader.c  shader.h  str.c  (+12 more)
src/shaders/: box.frag  generate.sh  meson.build  shaders_generated.h  text.vert
subprojects/: rlpw.wrap
